--- a/demo2/src/assets/sass/_init.scss
+++ b/demo2/src/assets/sass/_init.scss
@@ -1,5 +1,5 @@
 //
-// Main init file of global bootstrap and theme functions, mixins, variables and config
+// main init file of global bootstrap and theme functions, mixins, variables and config
 //
 
 
